# voice-recong-repo

./: .vscode.7z  MANIFEST.in  README.md  dir_path.joinpath(file_name)  environment.yml  images.7z  requirements.txt  setup.cfg  snippets.7z
