[metadata]
name = speaker-verification
version = 0.1.3
author = RestlessRockets
description = The machine learning package examines audio files submitted from a user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.fis.dev/projects/IN482022R3/repos/restless-rockets/browse

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8, <3.9
zip_safe = True
include_package_data = True
install_requires =
    audioread ==2.1.9
    Keras ==2.3.1
    librosa ==0.7.2
    numba ==0.48.0
    numpy ==1.18.5
    python-speech-features ==0.6
    tensorflow >=2.1.0
    pytest

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
  speaker_verification = speaker_verification:main
